# Face-Recognitation-System-Model-API

./: Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
App/: Main.py
Config/: .env  Config.py
Database/: Database_Engine.py  roles_database.py  users_database.py
Functions/: face_recognition_func.py  image_hash_func.py  insert_Image_vector_db_funcs.py
Nginx/: nginx.conf
Routers/face_recognition/: face_recognition_router.py  post_face_recognition.py
Routers/face_upload/: face_upload_router.py  post_new_face.py
Schemas/: auth_schema.py
chroma_db/: chroma.sqlite3
