[project]
name = "face-recognition-system-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "deepface>=0.0.93",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "opencv-python>=4.11.0.86",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "tf-keras>=2.19.0",
    "uvicorn>=0.34.0",
]
